// Trip Start Report Message
// Recipient: Control System
// Sender: AM
// Communication Protocol: MQTT over 5G module
syntax = "proto3";
package whereable.t2am;
import "Header.proto";
import "WGS84_Position.proto";

message TripStart {
  Header header = 1;
  string trip_id = 2;
  repeated WGS84_Position routes = 3;
}