syntax = "proto3";
package whereable.t2am;
import "Header.proto";

message WakeUp {
	Header header = 1;
}