edition = "2023";
package whereable.t2am;
import "Header.proto";

message ErrorReport { 
  Header header = 1; 
  ErrorCode error_code = 2; 
} 

enum ErrorCode { 
  UNKNOWN = 0; 
  ERROR = 1001; 
  FATAL = 2001; 
  EMERGENCY_STOP_BUTTON_ACTIVATED = 2002;
  OBSTACLE_ERROR = 3001;
  PASSENGER_EGRESS_TIMEOUT_ERROR = 3002;
  DOOR_UNRESPONSIVE_ERROR = 3003;
  CALL_NO_INTERACTION_TIMEOUT_ERROR = 3004;
	BATTERY_CHARGING_ANOMALY_ERROR = 3005;
	UNEXPECTED_STOP_ON_ROAD_ERROR = 3006;
	PEDESTRIAN_DETECTED_ON_ROAD = 3007;
	COLLISION_DETECTED_DURING_DRIVING = 3008;
	COLLISION_DETECTED_DURING_WAITING = 3009;
	PASSENGER_EXITED_DURING_DRIVING = 3010;
	PASSENGER_BOARDED_DURING_DRIVING = 3011;
}